--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="skaters-text">
                     <h2>Tudo para você</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cupiditate commodi dicta iste iure, porro quam quibusdam inventore corrupti neque nemo quia aperiam illo fuga optio tempora est pariatur. Deleniti.
+                        Na Skateshop, alimentamos a paixão pelo skate em todos os níveis, desde o novato até o profissional. Somos mais do que apenas uma loja; somos uma comunidade dedicada a promover o espírito livre e a cultura vibrante do skate. Se você está procurando explorar o mundo do skate ou se você já é um veterano experiente, venha nos visitar na Skateshop. Estamos aqui para ajudá-lo a alcançar novos patamares e aproveitar ao máximo sua jornada no skate. Radicalize sua vida - skate com paixão na Skateshop!
                     </p>
                 </div>
                 <img src="assets/imgs/sk8-girl.jpeg" alt="skater girl">
@@ -45,17 +45,17 @@
             <div id="cards">
                 <div class="cards-box">
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque vitae accusamus impedit facilis ducimus ipsa deserunt nostrum, iusto fugiat adipisci quasi error qui excepturi cumque corrupti dicta dignissimos dolores obcaecati?
+                        Nossa coleção abrangente de produtos de alta qualidade atende a todas as necessidades dos skatistas, desde decks personalizados até roupas e acessórios de marcas reconhecidas mundialmente. Buscamos oferecer não apenas produtos, mas também experiências que inspirem e capacitem nossos clientes a se expressarem através do skate.
                     </p>
                 </div>
                 <div class="cards-box">
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque vitae accusamus impedit facilis ducimus ipsa deserunt nostrum, iusto fugiat adipisci quasi error qui excepturi cumque corrupti dicta dignissimos dolores obcaecati?
+                        Quer você esteja procurando montar seu primeiro skate ou atualizar seu equipamento atual, nossa equipe experiente e apaixonada está aqui para ajudá-lo a encontrar exatamente o que você precisa. Valorizamos a comunicação aberta e a construção de relacionamentos genuínos com nossos clientes, garantindo que cada visita à nossa loja seja uma experiência positiva e memorável.
                     </p>
                 </div>
                 <div class="cards-box">
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque vitae accusamus impedit facilis ducimus ipsa deserunt nostrum, iusto fugiat adipisci quasi error qui excepturi cumque corrupti dicta dignissimos dolores obcaecati?
+                        Além disso, a Skateshop também é um ponto de encontro para a comunidade do skate local. Organizamos eventos, competições e sessões de skate para reunir skatistas de todas as idades e níveis de habilidade. Queremos ser mais do que apenas uma loja; queremos ser um hub onde os skatistas possam se conectar, compartilhar histórias e celebrar sua paixão pelo skate juntos.
                     </p>
                 </div>
             </div>
@@ -73,15 +73,15 @@
             <div id="cards-product">
                 <div class="cards-clothing">
                     <img src="assets/imgs/clothing/clothing1.jpeg" alt="">
-                    <p>Roupas de qualidade</p>
+                    <p>Roupas de qualidade e marcas confiáveis, escolha entre uma variedade de estilos.</p>
                 </div>
                 <div class="cards-clothing">
                     <img src="assets/imgs/clothing/clothing2.jpeg" alt="">
-                    <p>produtos inspiram muito o skate, atitude e lifestyle</p>
+                    <p>Produtos que inspiram muito o skate, atitude e lifestyle</p>
                 </div>
                 <div class="cards-clothing">
                     <img src="assets/imgs/clothing/clothing3.jpeg" alt="">
-                    <p>A escolha perfeita para completar seu visual skatewear.</p>
+                    <p>Vista-se com autenticidade e estilo com nossa linha de roupas streetwear</p>
                 </div>
                 <div class="cards-clothing">
                     <img src="assets/imgs/clothing/clothing4.jpeg" alt="">
@@ -89,19 +89,19 @@
                 </div>
                 <div class="cards-clothing">
                     <img src="assets/imgs/acessorios/acessorios1.jpeg" alt="">
-                    <p>Deixe seu estilo autêntico e moderno para o seu dia a dia.</p>
+                    <p>A escolha perfeita para completar seu visual skatewear.</p>
                 </div>
                 <div class="cards-clothing">
                     <img src="assets/imgs/acessorios/acessorios5.jpeg" alt="">
-                    <p>Deixe seu estilo autêntico e moderno para o seu dia a dia.</p>
+                    <p>Cada peça é cuidadosamente selecionada para oferecer conforto e durabilidade.</p>
                 </div>
                 <div class="cards-clothing">
                     <img src="assets/imgs/acessorios/acessorios6.jpeg" alt="">
-                    <p>Deixe seu estilo autêntico e moderno para o seu dia a dia.</p>
+                    <p>Mantenha seus pés confortáveis e protegidos com nossa coleção de calçados duráveis para skatistas.</p>
                 </div>
                 <div class="cards-clothing">
                     <img src="assets/imgs/acessorios/acessorios8.jpeg" alt="">
-                    <p>Deixe seu estilo autêntico e moderno para o seu dia a dia.</p>
+                    <p>Tênis de skate resistentes para o pós-sessão para manter seus pés firmes no skate.</p>
                 </div>
             </div>
             <div id="email">
