correçao de imagem

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </header>
         <main class="content">
             <div id="skaters">
-                <img src="assets/imgs/sk8-boy.jpeg" alt="skater boy">
+                <img src="assets/imgs/sk8-girl.jpeg" alt="skater">
                 <div class="skaters-text">
                     <h2>Tudo para você</h2>
                     <p>
